--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-fetch": "^2.6.9",
-    "dotenv": "^16.3.1"
+    "sqlite3": "^5.1.7"
   }
-} 
+}
