--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "daily-llm-insights",
+  "name": "vocabex",
   "version": "1.0.0",
-  "description": "A lightweight web application that displays daily LLM-generated insights",
+  "description": "Vocabulary learning application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,7 +9,10 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.9",
-    "sqlite3": "^5.1.7"
+    "node-fetch": "^2.7.0",
+    "sqlite3": "^5.1.6"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
